# hagyma_crysys

./: .gitignore  .gitmodules  README.md
Backend/: Backend.sln
Backend/Backend/: Backend.csproj  Program.cs  appsettings.json  nlog.config
Backend/Backend/CAFFParser/: BytesVector.cs  CAFF.cs  CAFFParser.cs  CAFFParserPINVOKE.cs  CIFF.cs  CIFFAndDuration.cs  CIFFAndDurationVector.cs  DateTime.cs  Endianess.cs  StringVector.cs  caff_parserCSHARP_wrap.cxx
Backend/Backend/Controllers/: AuthenticationController.cs  CaffController.cs  PaymentController.cs  UserController.cs
Backend/Backend/Dal/: AppDbContext.cs  UserInit.cs
Backend/Backend/Dal/Entities/: DbComment.cs  DbImage.cs  DbUserInfo.cs  Log.cs
Backend/Backend/Exceptions/: CommentNotFoundException.cs  ImageNotFoundException.cs  InvalidCaffException.cs  NotAllowedException.cs  PasswordChangeException.cs  UserNotFoundException.cs
Backend/Backend/Extensions/: DateTimeConverter.cs  IdentityExtensions.cs  ModelConversionExtensions.cs
Backend/Backend/Helpers/: Constants.cs  PixelMap.cs
Backend/Backend/Migrations/: 20221114135849_init.Designer.cs  20221114135849_init.cs  20221114140709_addPurchased.Designer.cs  20221114140709_addPurchased.cs  20221114141358_changePreviewType.Designer.cs  20221114141358_changePreviewType.cs  20221114143643_deleteField.Designer.cs  20221114143643_deleteField.cs  20221114144411_foreignkeycomment.Designer.cs  20221114144411_foreignkeycomment.cs  20221115095509_init.Designer.cs  20221115095509_init.cs  20221118123807_keys.Designer.cs  20221118123807_keys.cs  20221118124430_many-many.Designer.cs  20221118124430_many-many.cs  20221124134113_smallpreview.Designer.cs  20221124134113_smallpreview.cs  20221124135218_smallpreviewRequired.Designer.cs  20221124135218_smallpreviewRequired.cs  20221130142956_RegistrationDate.Designer.cs  20221130142956_RegistrationDate.cs  20221130235629_commentUser.Designer.cs  20221130235629_commentUser.cs  20221202170059_logging.Designer.cs  20221202170059_logging.cs  AppDbContextModelSnapshot.cs
Backend/Backend/Models/: CaffDetails.cs  CaffItem.cs  CaffUploadRequest.cs  Comment.cs  CommentRequest.cs  User.cs
Backend/Backend/Models/Auth/: AuthRoles.cs  AuthUser.cs  LoginRequest.cs  RegisterRequest.cs  UserChangeRequest.cs
Backend/Backend/Properties/: launchSettings.json
Backend/Backend/Services/: CaffService.cs  CommentService.cs  PaymentService.cs  UserService.cs
Backend/Backend/Services/Interfaces/: ICaffService.cs  ICommentService.cs  IPaymentService.cs  IUserService.cs
Backend/BackendTest/: AuthHelper.cs  AuthenticationControllerIntegrationTest.cs  BackendTest.csproj  CaffControllerIntegrationTest.cs  Helper.cs  PaymentControllerIntegrationTest.cs  TestingWebAppFactory.cs  UserControllerIntegrationTest.cs  coverage.runsettings
CAFFParser/: CMakeLists.txt  Makefile  README.md  main.cpp
CAFFParser/CAFFParser_lib/: CAFF.cpp  CAFF.h  CIFF.cpp  CIFF.h  CMakeLists.txt  Date.h  DateValidator.cpp  DateValidator.h  ParseUtils.cpp  ParseUtils.h  caff.cpp  caff.h  caff.i  caff_parser.i  ciff.cpp  ciff.h  ciff.i  date_time.h  date_time.i  date_validator.cpp  date_validator.h  endianess.h  endianess.i  library.h  parse_exception.h  parse_utils.cpp  parse_utils.h
CAFFParser/Tests/: CMakeLists.txt  caff_test.cpp  ciff_test.cpp  date_validator_test.cpp  file_reader.cpp  file_reader.h  parse_utils_test.cpp
CAFFParser/Tests/test_files/CIFF/: invalid_width_and_height.ciff  invalid_with_CIFc_magic.ciff  invalid_with_ciff_magic.ciff  invalid_with_header_size_-1.ciff  invalid_with_header_size_0.ciff  invalid_with_missing_closing_character_after_last_tag.ciff  invalid_with_negative_content_size.ciff  invalid_with_non-zero_image_width.ciff  invalid_with_tags_containing_new_line.ciff  invalid_with_zero_height_and_width.ciff  valid_color.ciff  valid_grayscale.ciff  valid_without_caption.ciff  valid_without_pixels.ciff
CAFFParser/test_files/CIFF/: test10.ciff  test14.ciff
Frontend/hagyma/: build.gradle  settings.gradle
Frontend/hagyma/app/: .openapi.ignore  build.gradle  swagger.json
Frontend/hagyma/app/src/androidTest/java/com/example/hagyma/: ExampleInstrumentedTest.kt
Frontend/hagyma/app/src/main/: AndroidManifest.xml
Frontend/hagyma/app/src/main/java/com/example/hagyma/: BaseActivity.kt  MainActivity.kt  SecondActivity.kt
Frontend/hagyma/app/src/main/java/com/example/hagyma/api/: AuthenticationApi.kt  CaffApi.kt  PaymentApi.kt  UserApi.kt
Frontend/hagyma/app/src/main/java/com/example/hagyma/data/: CAFF.kt  Comment.kt  ListItem.kt  User.kt
Frontend/hagyma/app/src/main/java/com/example/hagyma/extensions/: EditText.kt
Frontend/hagyma/app/src/main/java/com/example/hagyma/helper/: ApiHelper.kt
Frontend/hagyma/app/src/main/java/com/example/hagyma/http/: CustomClientFactory.kt
Frontend/hagyma/app/src/main/java/com/example/hagyma/infrastructure/: ApiAbstractions.kt  ApiClient.kt  ApiResponse.kt  BigDecimalAdapter.kt  BigIntegerAdapter.kt  ByteArrayAdapter.kt  Errors.kt  LocalDateAdapter.kt  LocalDateTimeAdapter.kt  OffsetDateTimeAdapter.kt  PartConfig.kt  RequestConfig.kt  RequestMethod.kt  ResponseExtensions.kt  Serializer.kt  URIAdapter.kt  (+1 more)
Frontend/hagyma/app/src/main/res/layout/: activity_main.xml  app_bar_main.xml  comment_item.xml  fragment_admin_users.xml  fragment_edit_my_picture.xml  fragment_edit_profile.xml  fragment_gallery.xml  fragment_my_one_picture.xml  fragment_my_pictures.xml  fragment_one_purchased_picture.xml  fragment_profile.xml  fragment_purchased_pictures.xml  fragment_searched_picture.xml  fragment_upload_caff.xml  layout_loading_dialog.xml  nav_header_main.xml  picture_item.xml  registration.xml  user_item.xml
Frontend/hagyma/app/src/main/res/menu/: activity_main_drawer.xml
Frontend/hagyma/app/src/main/res/navigation/: mobile_navigation.xml
Frontend/hagyma/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Frontend/hagyma/app/src/main/res/values-night/: themes.xml
Frontend/hagyma/app/src/test/java/com/example/hagyma/: ExampleUnitTest.kt
Frontend/hagyma/gradle/wrapper/: gradle-wrapper.properties
(+43 files in other folders)
